Bug 1802327 [Linux] Activate nsWindow by SetUserTimeAndStartupTokenForActivatedWindow() after gtk_widget_show() to make sure it's visible r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D163310